syntax = "proto3";
package communication;
option go_package=".;communication";
// import "google/protobuf/timestamp.proto";
import "communication/contract.proto";

message StripeEntity {
    string first_name = 1;
    string last_name = 7;
    string phone = 2;
    AddressEntity address = 3;
    DobEntity dob = 4;
    string last_four_account = 5;
    string routing_number = 6;
}

message AddressEntity {
    string city = 1;
    string country = 2;
    string line1 = 3;
    string line2 = 4;
    string postal_code = 5;
    string state = 6;
}

message DobEntity {
    uint32 day = 1;
    uint32 month = 2;
    uint32 year = 3;
}
message PaymentRegisterRequest {
    string user_id = 1;
    string return_route = 2;
}
message FCSSecret {
    string client_secret = 1;
}
message AccountLinkResp {
    string url = 1;
}

message FCAccountSet {
    repeated string account_ids = 1;
    string user_id = 2;
}

message IntentCreateReq {
    string user_id = 1;
}

message IntentSecret {
    string client_secret = 1;
}

message BankAccountEntity {
    string account_id = 1;
    string account_last4 = 2;
    string routing = 3;
    string account_type = 4;
    string payment_method_id = 5;
}

message ListRequest {
    string user_id = 1;
}
message BASet {
    repeated BankAccountEntity accounts = 1;
}

message SetupConfirm {
    string user_id = 1;
    string pm_id= 2;
}

message FcaQuery {
    string user_id = 1;
    string fca_id = 2;
}

message ExBaQuery {
    string user_id = 1;
    string ba_id = 2;
}

message ContractIntentRequest {
    string worker_id = 1;
    string buyer_id = 2;
}

message InternalChargeEntity {
    string id = 1;
    string contract_title = 7;
    string contract_id = 2;
    UserNubEntity worker = 3;
    UserNubEntity buyer = 4;

    uint32 state = 5;
    string state_message = 14;
    int64 amount = 6;

    string PaymentIntentId = 8;
    string ChargeId = 9;
    string TransferId = 10;
    string PaymentId = 11;
    string PayoutId = 13;
    string TransferGroup = 12;
}
message InternalChargeRequest {
    string user_id = 1;
}

message InternalChargeSet {
    repeated InternalChargeEntity charges = 1;
}

message InternalChargeCustomQuery {
    string filter_key = 1;
    string filter_value = 2;
}

message InternalChargeUpdateStateRequest {
    InternalChargeEntity charge = 1;
    uint32 new_state = 2;
}

message DeleteConAccRequest {
    string user_id = 1;
}

service StripeService {
    rpc GetAccountOnboardLink(PaymentRegisterRequest) returns (AccountLinkResp) {};

    rpc GetInitialSetupSecret(PaymentRegisterRequest) returns (IntentSecret) {};
    rpc GetCustomerFCSecret(PaymentRegisterRequest) returns (FCSSecret) {};

    rpc ConfirmPaymentConnected(SetupConfirm) returns (NullResponse) {};

    rpc ListFcas(ListRequest) returns (BASet) {};
    rpc ListExBAs(ListRequest) returns (BASet) {};

    rpc DisconnectExBa(ExBaQuery) returns (NullResponse) {};
    rpc DeleteConnectedAccount(DeleteConAccRequest) returns (NullResponse) {};
    
    rpc DisconnectFca(FcaQuery) returns (NullResponse) {};
    rpc SetDefaultFca(FcaQuery) returns (NullResponse) {};

    rpc TestCharge(IntentCreateReq) returns (IntentSecret) {};

    rpc GetInternalCharges(InternalChargeRequest) returns (InternalChargeSet) {};

    rpc TransferDeadlineFunds(InternalChargeEntity) returns (NullResponse) {};
    rpc QueryICharge(InternalChargeCustomQuery) returns (InternalChargeEntity) {};
    rpc UpdateState(InternalChargeUpdateStateRequest) returns (InternalChargeEntity) {};
    // rpc CreateContractIntentSecret(ContractIntentRequest) returns (NullResponse) {};
}